chore(locale): update ru locale #3

--- a/packages/hoppscotch-common/locales/ru.json
+++ b/packages/hoppscotch-common/locales/ru.json
@@ -69,7 +69,7 @@
     "copy_interface_type": "Copy interface type",
     "copy_user_id": "Копировать токен пользователя",
     "developer_option": "Настройки разработчика",
-    "developer_option_description": "Инструмент разработчика помогает обслуживить и развивить Hoppscotch",
+    "developer_option_description": "Инструмент разработчика помогает обслуживать и развивать Hoppscotch",
     "discord": "Discord",
     "documentation": "Документация",
     "github": "GitHub",
