--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -14,6 +14,7 @@
       "client_id": "CLIENT ID",
       "client_secret": "CLIENT SECRET",
       "description": "Configure authentication providers for your server",
+      "provider_not_specified": "Please enable at least one authentication provider",
       "scope": "SCOPE",
       "tenant": "TENANT",
       "title": "Authentication Providers",
@@ -171,6 +172,7 @@
     "remove_admin_from_users_success": "Admin status removed from selected users!!",
     "remove_admin_to_delete_user": "Remove admin privilege to delete the user!!",
     "remove_owner_to_delete_user": "Remove team ownership status to delete the user!!",
+    "remove_owner_failure_only_one_owner": "Failed to remove member. There should be atleast one owner in a team!!",
     "remove_admin_for_deletion": "Remove admin status before attempting deletion!!",
     "remove_owner_for_deletion": "One or more users are team owners. Update ownership before deletion!!",
     "remove_invitee_failure": "Removal of invitee failed!!",
@@ -193,7 +195,6 @@
     "sign_in_options": "All sign in option",
     "sign_out": "Sign out",
     "team_name_too_short": "Workspace name should be atleast 6 characters long!!",
-    "team_name_long": "Workspace name should be atleast 6 characters long!!",
     "user_already_invited": "Failed to send invite. User is already invited!!",
     "user_not_found": "User not found in the infra!!",
     "users_to_admin_success": "Selected users are elevated to admin status!!",
