--- a/packages/hoppscotch-common/locales/tr.json
+++ b/packages/hoppscotch-common/locales/tr.json
@@ -17,15 +17,17 @@
     "dismiss": "Boşver",
     "dont_save": "Don't save",
     "download_file": "Dosyayı Indir",
-    "drag_to_reorder": "Drag to reorder",
+    "drag_to_reorder": "Yeniden sıralamak için sürükleyin",
     "duplicate": "Klonla",
     "edit": "Düzenle",
-    "filter": "Filter",
+    "filter": "Filtre",
     "go_back": "Geri git",
-    "go_forward": "Go forward",
+    "go_forward": "İleri git",
     "group_by": "Group by",
+    "hide_secret": "Hide secret",
     "label": "Etiket",
     "learn_more": "Daha fazla bilgi edin",
+    "download_here": "Download here",
     "less": "Daha az",
     "more": "Daha fazla",
     "new": "Yeni",
@@ -42,8 +44,9 @@
     "scroll_to_top": "Scroll to top",
     "search": "Arama",
     "send": "Gönder",
-    "share": "Share",
+    "share": "Paylaş",
     "start": "Başla",
+    "show_secret": "Show secret",
     "starting": "Starting",
     "stop": "Dur",
     "to_close": "kapatmak için",
@@ -101,16 +104,18 @@
   "auth": {
     "account_exists": "Farklı kimlik bilgilerine sahip hesap var - Her iki hesabı birbirine bağlamak için giriş yapın",
     "all_sign_in_options": "Tüm oturum açma seçenekleri",
+    "continue_with_auth_provider": "{provider} ile devam et",
     "continue_with_email": "E-posta ile devam et",
-    "continue_with_github": "GitHub hesabı ile devam et",
-    "continue_with_google": "Google hesabı ile devam et",
-    "continue_with_microsoft": "Microsoft hesabı ile devam et",
+    "continue_with_github": "GitHub ile devam et",
+    "continue_with_github_enterprise": "GitHub Enterprise ile devam et",
+    "continue_with_google": "Google ile devam et",
+    "continue_with_microsoft": "Microsoft ile devam et",
     "email": "E-posta",
     "logged_out": "Çıkış yapıldı",
     "login": "Giriş yap",
     "login_success": "Başarıyla giriş yapıldı",
     "login_to_hoppscotch": "Hoppscotch'a giriş yapın",
-    "logout": "Çıkış yap",
+    "logout": "Çıkış",
     "re_enter_email": "E-mail adresinizi yeniden girin",
     "send_magic_link": "Sihirli bir bağlantı gönder",
     "sync": "Senkronizasyon",
@@ -135,20 +140,42 @@
       "redirect_no_token_endpoint": "No Token Endpoint Defined",
       "something_went_wrong_on_oauth_redirect": "Something went wrong during OAuth Redirect",
       "something_went_wrong_on_token_generation": "Something went wrong on token generation",
-      "token_generation_oidc_discovery_failed": "Failure on token generation: OpenID Connect Discovery Failed"
+      "token_generation_oidc_discovery_failed": "Failure on token generation: OpenID Connect Discovery Failed",
+      "grant_type": "Grant Type",
+      "grant_type_auth_code": "Authorization Code",
+      "token_fetched_successfully": "Token fetched successfully",
+      "token_fetch_failed": "Failed to fetch token",
+      "validation_failed": "Validation Failed, please check the form fields",
+      "label_authorization_endpoint": "Authorization Endpoint",
+      "label_client_id": "Client ID",
+      "label_client_secret": "Client Secret",
+      "label_code_challenge": "Code Challenge",
+      "label_code_challenge_method": "Code Challenge Method",
+      "label_code_verifier": "Code Verifier",
+      "label_scopes": "Scopes",
+      "label_token_endpoint": "Token Endpoint",
+      "label_use_pkce": "Use PKCE",
+      "label_implicit": "Implicit",
+      "label_password": "Password",
+      "label_username": "Username",
+      "label_auth_code": "Authorization Code",
+      "label_client_credentials": "Client Credentials"
     },
     "pass_key_by": "Şunla anahtar ekleyin",
+    "pass_by_query_params_label": "Query Parameters",
+    "pass_by_headers_label": "Headers",
     "password": "Parola",
     "save_to_inherit": "Please save this request in any collection to inherit the authorization",
     "token": "Jeton",
-    "type": "Yetki türü",
+    "type": "Yetki Türü",
     "username": "Kullanıcı adı"
   },
   "collection": {
     "created": "Koleksiyon oluşturuldu",
     "different_parent": "Cannot reorder collection with different parent",
     "edit": "Koleksiyonu düzenle",
-    "import_or_create": "Import or create a collection",
+    "import_or_create": "Koleksiyon oluşturun veya içe aktarın",
+    "import_collection":"Koleksiyonu İçe Aktar",
     "invalid_name": "Lütfen koleksiyon için geçerli bir ad girin",
     "invalid_root_move": "Collection already in the root",
     "moved": "Başarıyla taşındı",
@@ -237,6 +264,7 @@
     "pending_invites": "Bu takım için bekleyen bir istek yok",
     "profile": "Bu profili görüntülemek için giriş yapın",
     "protocols": "Protokoller boş",
+    "request_variables": "This request does not have any request variables",
     "schema": "Bir GraphQL uç noktasına bağlanma",
     "shared_requests": "Shared requests are empty",
     "shared_requests_logout": "Login to view your shared requests or create a new one",
@@ -260,11 +288,11 @@
     "import_or_create": "Import or create a environment",
     "invalid_name": "Lütfen ortam için geçerli bir ad girin",
     "list": "Environment variables",
-    "my_environments": "My Environments",
+    "my_environments": "Ortamlarım",
     "name": "Name",
     "nested_overflow": "İç içe ortam değişkenleri 10 düzeyle sınırlıdır",
     "new": "Yeni ortam",
-    "no_active_environment": "No active environment",
+    "no_active_environment": "Aktif ortam yok",
     "no_environment": "Ortam yok",
     "no_environment_description": "Hiçbir ortam seçilmedi. Aşağıdaki değişkenlerle ne yapacağınızı seçin.",
     "quick_peek": "Environment Quick Peek",
@@ -276,8 +304,8 @@
     "team_environments": "Team Environments",
     "title": "Ortamlar",
     "updated": "Ortam güncellendi",
-    "value": "Value",
-    "variable": "Variable",
+    "value": "Değer",
+    "variable": "Değişken",
     "variable_list": "Değişken listesi"
   },
   "error": {
