--- a/packages/hoppscotch-common/locales/tr.json
+++ b/packages/hoppscotch-common/locales/tr.json
@@ -112,7 +112,7 @@
     "continue_with_microsoft": "Microsoft ile devam et",
     "email": "E-posta",
     "logged_out": "Çıkış yapıldı",
-    "login": "Giriş yap",
+    "login": "Giriş",
     "login_success": "Başarıyla giriş yapıldı",
     "login_to_hoppscotch": "Hoppscotch'a giriş yapın",
     "logout": "Çıkış",
@@ -653,7 +653,7 @@
     "profile_description": "Profil detaylarını güncelle",
     "profile_email": "E-posta adresi",
     "profile_name": "Profil ismi",
-    "proxy": "vekil",
+    "proxy": "Proxy",
     "proxy_url": "Proxy URL'si",
     "proxy_use_toggle": "İstek göndermek için proxy ara yazılımını kullanın",
     "read_the": "Oku",
