refactor: updated smtp config component to use advanced configs as checkbox

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -217,6 +217,7 @@
     "admin_id": "Admin ID",
     "cancel": "Cancel",
     "confirm_team_deletion": "Confirm deletion of the workspace?",
+    "copy": "Copy",
     "create_team": "Create Workspace",
     "date": "Date",
     "delete_team": "Delete Workspace",
@@ -269,6 +270,7 @@
     "admin_id": "Admin ID",
     "cancel": "Cancel",
     "created_on": "Created On",
+    "copy_link": "Copy Link",
     "date": "Date",
     "delete": "Delete",
     "delete_user": "Delete User",
