--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1055,6 +1055,7 @@
     "invalid_label": "Please provide a label for the token",
     "no_expiration_verbose": "This token will never expire!",
     "token_expires_on": "This token will expire on",
-    "generate_new_token": "Generate new token"
+    "generate_new_token": "Generate new token",
+    "generate_modal_title": "New Personal Access Token"
   }
 }
