--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -282,7 +282,7 @@
     "added": "Environment addition",
     "create_new": "Create new environment",
     "created": "Environment created",
-    "deleted": "Environment deletion",
+    "deleted": "Environment deleted",
     "duplicated": "Environment duplicated",
     "edit": "Edit Environment",
     "empty_variables": "No variables",
