chore: minor updates to no workspace empty states

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1043,7 +1043,8 @@
     "other_workspaces": "My Workspaces",
     "team": "Workspace",
     "title": "Workspaces",
-    "no_workspace": "No Workspace"
+    "no_workspace": "No Workspace",
+    "no_workspace_selected": "No workspace selected."
   },
   "site_protection": {
     "login_to_continue": "Login to continue",
