--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -34,8 +34,10 @@
     "load_error": "Unable to load server configurations",
     "mail_configs": {
       "address_from": "MAILER FROM ADDRESS",
+      "advanced_smtp": "Advanced SMTP Configurations",
       "description": " Configure the smtp configurations",
-      "enable": "Email based authentication",
+      "enable_email_auth": "Enable Email based authentication",
+      "enable_smtp": "Enable SMTP Configurations",
       "host": "MAILER HOST",
       "password": "MAILER PASSWORD",
       "port": "MAILER PORT",
