--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -287,6 +287,7 @@
     "no_invite": "No pending invites found",
     "no_shared_requests": "No shared requests created by the user",
     "no_users": "No users found",
+    "not_available": "Not Available",
     "not_found": "User not found",
     "pending_invites": "Pending Invites",
     "remove_admin_privilege": "Remove Admin Privilege",
