--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1012,7 +1012,7 @@
     "invite_sent_smtp_disabled": "Invite links generated",
     "we_sent_invite_link_description": "Ask all invitees to check their inbox. Click on the link to join the workspace.",
     "invite_sent_smtp_disabled_description": "Sending invite emails is disabled for this instance of Hoppscotch. Please use the Copy link button to copy and share the invite link manually.",
-    "copy_invite_link": "Copy invite link",
+    "copy_invite_link": "Copy Invite Link",
     "search_title": "Team Requests"
   },
   "team_environment": {
