--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -166,8 +166,8 @@
     "link_copied_to_clipboard": "Link copied to clipboard",
     "logged_out": "Logged out",
     "login_as_admin": "and login with an admin account.",
-    "login_using_email": "Please ask them to check their email or share the link below",
-    "login_using_link": "Please ask them to login using the link below",
+    "login_using_email": "Please ask the user to check their email or share the link below",
+    "login_using_link": "Please ask the user to login using the link below",
     "logout": "Logout",
     "magic_link_sign_in": "Click on the link to sign in.",
     "magic_link_success": "We sent a magic link to",
