feat: request auto rename prototype (#1)

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1,5 +1,6 @@
 {
   "action": {
+    "auto_rename": "✨ Rename Request ✨",
     "add": "Add",
     "autoscroll": "Autoscroll",
     "cancel": "Cancel",
