feat: new svg added and better ui for infra tokens related components

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -5,6 +5,7 @@
     "section_description": "Personal access tokens currently helps you connect the CLI to your Hoppscotch account",
     "last_used_on": "Last used on",
     "expires_on": "Expires on",
+    "empty": "Access tokens are empty",
     "no_expiration": "No expiration",
     "expired": "Expired",
     "copy_token_warning": "Make sure to copy your personal access token now. You won't be able to see it again!",
@@ -152,6 +153,7 @@
     "configure_auth": "Check out the documentation to configure auth providers.",
     "confirm_admin_to_user": "Do you want to remove admin status from this user?",
     "confirm_admins_to_users": "Do you want to remove admin status from selected users?",
+    "confirm_delete_access_token": "Are you sure you want to delete the access token {tokenLabel}?",
     "confirm_delete_invite": "Do you want to revoke the selected invite?",
     "confirm_delete_invites": "Do you want to revoke selected invites?",
     "confirm_user_deletion": "Confirm user deletion?",
