refactor: better imports and updated i18n strings

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -1,27 +1,4 @@
 {
-  "infra_tokens": {
-    "tab_title": "Tokens",
-    "section_title": "Infra Tokens",
-    "section_description": "Personal access tokens currently helps you connect the CLI to your Hoppscotch account",
-    "last_used_on": "Last used on",
-    "expires_on": "Expires on",
-    "empty": "Access tokens are empty",
-    "no_expiration": "No expiration",
-    "expired": "Expired",
-    "copy_token_warning": "Make sure to copy your personal access token now. You won't be able to see it again!",
-    "token_purpose": "What's this token for?",
-    "expiration_label": "Expiration",
-    "scope_label": "Scope",
-    "workspace_read_only_access": "Read-only access to workspace data.",
-    "personal_workspace_access_limitation": "Personal Access Tokens can't access your personal workspace.",
-    "generate_token": "Generate Token",
-    "invalid_label": "Please provide a label for the token",
-    "no_expiration_verbose": "This token will never expire!",
-    "token_expires_on": "This token will expire on",
-    "generate_new_token": "Generate new token",
-    "generate_modal_title": "New Personal Access Token",
-    "deletion_success": "The access token {label} has been deleted"
-  },
   "action": {
     "cancel": "Cancel",
     "confirm": "Confirm",
@@ -105,6 +82,29 @@
     "title": "Make Hoppscotch Better",
     "welcome": "Welcome to"
   },
+  "infra_tokens": {
+    "tab_title": "Infra Tokens",
+    "section_title": "Infra Tokens",
+    "section_description": "Manage your Hoppscotch users through APIs with Infra tokens",
+    "last_used_on": "Last used on",
+    "expires_on": "Expires on",
+    "empty": "Infra tokens are empty",
+    "no_expiration": "No expiration",
+    "expired": "Expired",
+    "copy_token_warning": "Make sure to copy your infra token now. You won't be able to see it again!",
+    "token_purpose": "Enter a label to identify this token",
+    "expiration_label": "Expiration",
+    "scope_label": "Scope",
+    "workspace_read_only_access": "Read-only access to workspace data.",
+    "personal_workspace_access_limitation": "Personal Access Tokens can't access your personal workspace.",
+    "generate_token": "Generate Token",
+    "invalid_label": "Please provide a label for the token",
+    "no_expiration_verbose": "This token will never expire!",
+    "token_expires_on": "This token will expire on",
+    "generate_new_token": "Generate new token",
+    "generate_modal_title": "New Infra Token",
+    "deletion_success": "The infra token {label} has been deleted"
+  },
   "metrics": {
     "dashboard": "Dashboard",
     "no_metrics": "No metrics found",
@@ -170,6 +170,7 @@
     "create_team_failure": "Failed to create workspace!!",
     "create_team_success": "Workspace created successfully!!",
     "data_sharing_failure": "Failed to update data sharing settings",
+    "delete_infra_token_failure": "Something went wrong while deleting the infra token",
     "delete_invite_failure": "Failed to delete invite!!",
     "delete_invites_failure": "Failed to delete selected invites!!",
     "delete_invite_success": "Invite deleted successfully!!",
@@ -193,8 +194,10 @@
     "enter_team_email": "Please enter email of workspace owner!!",
     "error": "Something went wrong",
     "error_auth_providers": "Unable to load auth providers",
+    "generate_infra_token_failure": "Something went wrong while generating the infra token",
     "github_signin_failure": "Failed to login with Github",
     "google_signin_failure": "Failed to login with Google",
+    "infra_token_label_short": "Infra Token Label character length is too short!!",
     "invalid_email": "Please enter a valid email address",
     "link_copied_to_clipboard": "Link copied to clipboard",
     "logged_out": "Logged out",
@@ -240,6 +243,7 @@
     "sign_in_agreement": "By signing in, you are agreeing to our",
     "sign_in_options": "All sign in option",
     "sign_out": "Sign out",
+    "something_went_wrong": "Something went wrong",
     "team_name_too_short": "Workspace name should be atleast 6 characters long!!",
     "user_already_invited": "Failed to send invite. User is already invited!!",
     "user_not_found": "User not found in the infra!!",
