refactor: code improvements

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -83,27 +83,24 @@
     "welcome": "Welcome to"
   },
   "infra_tokens": {
-    "tab_title": "Infra Tokens",
-    "section_title": "Infra Tokens",
-    "section_description": "Manage your Hoppscotch users through APIs with Infra tokens",
-    "last_used_on": "Last used on",
-    "expires_on": "Expires on",
-    "empty": "Infra tokens are empty",
-    "no_expiration": "No expiration",
-    "expired": "Expired",
     "copy_token_warning": "Make sure to copy your infra token now. You won't be able to see it again!",
-    "token_purpose": "Enter a label to identify this token",
+    "deletion_success": "The infra token {label} has been deleted",
+    "empty": "Infra tokens are empty",
+    "expired": "Expired",
     "expiration_label": "Expiration",
-    "scope_label": "Scope",
-    "workspace_read_only_access": "Read-only access to workspace data.",
-    "personal_workspace_access_limitation": "Personal Access Tokens can't access your personal workspace.",
+    "expires_on": "Expires on",
+    "generate_modal_title": "New Infra Token",
+    "generate_new_token": "Generate new token",
     "generate_token": "Generate Token",
     "invalid_label": "Please provide a label for the token",
+    "last_used_on": "Last used on",
+    "no_expiration": "No expiration",
     "no_expiration_verbose": "This token will never expire!",
+    "section_description": "Manage your Hoppscotch users through APIs with Infra tokens",
+    "section_title": "Infra Tokens",
+    "tab_title": "Infra Tokens",
     "token_expires_on": "This token will expire on",
-    "generate_new_token": "Generate new token",
-    "generate_modal_title": "New Infra Token",
-    "deletion_success": "The infra token {label} has been deleted"
+    "token_purpose": "Enter a label to identify this token"
   },
   "metrics": {
     "dashboard": "Dashboard",
