refactor: changed copy link button to copy invite link

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -276,6 +276,7 @@
     "admin_id": "Admin ID",
     "cancel": "Cancel",
     "created_on": "Created On",
+    "copy_invite_link": "Copy Invite Link",
     "copy_link": "Copy Link",
     "date": "Date",
     "delete": "Delete",
