--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -55,7 +55,8 @@
     "turn_off": "Turn off",
     "turn_on": "Turn on",
     "undo": "Undo",
-    "yes": "Yes"
+    "yes": "Yes",
+    "duplicate_to_personal_workspace": "Duplicate to personal workspace"
   },
   "add": {
     "new": "Add new",
