chore: hide duplicate `Global environment` action for a team workspace

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -55,8 +55,7 @@
     "turn_off": "Turn off",
     "turn_on": "Turn on",
     "undo": "Undo",
-    "yes": "Yes",
-    "duplicate_to_personal_workspace": "Duplicate to personal workspace"
+    "yes": "Yes"
   },
   "add": {
     "new": "Add new",
